--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -15,8 +15,8 @@
         "read_more": "थप विवरण"
     },
     "about": {
-        "heading": "🚀सजिलो निकासी, कुनै दाँव आवश्यकता छैन!",
-        "description": "❗️महत्त्वपूर्ण अनुस्मारक:",
+        "heading": "सजिलो निकासी, कुनै दाँव आवश्यकता छैन!",
+        "description": "महत्त्वपूर्ण अनुस्मारक:",
         "description1": "एजेन्ट र्याङ्क प्रदर्शन आधारमा समायोजन हुन्छ। उच्च कमिशन कमाउन उच्च र्याङ्क कायम राख्न सक्रिय प्रचार सुनिश्चित गर्नुहोस्!",
         "description2": "अपग्रेड पछि तपाईंको र्याङ्क घटाइने छैन।",
         "description3": "एजेन्ट र्याङ्क प्रोत्साहन आवश्यकताहरू वास्तविक सञ्चालन अवस्था अनुसार परिवर्तन हुन सक्छन्। कृपया विवरणहरूको लागि वेबसाइट सूचनाहरू हेर्नुहोस्।",
@@ -71,19 +71,24 @@
         }
     },
     "about_page": {
-        "company_intro": "💰 पुरस्कार: ६०% नाफा साझेदारी",
+        "company_intro": "पुरस्कार: ६०% नाफा साझेदारी",
         "company_description": "नाफा गणना:",
         "company_description1": "नाफा = (ग्राहकको नोक्सानी - बोनस) - २०% सञ्चालन लागत",
         "company_description2": "तपाईंको बोनस = नाफा × ६०% (एजेन्ट स्तर अनुसार कमिशन प्रतिशत बढ्छ)",
-        "company_description3": "🎯 एजेन्ट स्तर र कमिशन प्रतिशत:",
-  
+        "company_description3": "एजेन्ट स्तर र कमिशन प्रतिशत:",
+        "company_description4": "एजेन्ट स्तर_______ग्राहक नोक्सानी दायरा____कमिशन प्रतिशत",
+        "company_description5": "______________________________________________________",
+        "company_description6": "A________________० – १,००,०००___________३०%__________",
+        "company_description7": "B________________१,००,००० – २,००,०००____४०%__________",
+        "company_description8": "C________________३,००,००० – ४,००,०००____५०%__________",
+        "company_description9": "D________________४,००,०००_______________६०%_________",
         "mission_title": "उदाहरण:",
         "mission_description": "मानौं तपाईं डी स्तरको एजेन्ट हुनुहुन्छ र ग्राहकले १ करोड जम्मा गर्छ र ६० लाख निकाल्छ। तपाईंको नाफा यसरी गणना गरिन्छ:",
         "mission_description1": "ग्राहक नोक्सानी: १ करोड - ६० लाख = ४० लाख",
         "mission_description2": "कुल नाफा: ४० लाख - २ लाख (बोनस) - ८ लाख (२०% सञ्चालन लागत) = ३० लाख",
         "mission_description3": "एजेन्ट स्तर: D, ६०% बोनस",
         "mission_description4": "तपाईंको बोनस: ३० लाख x ६०% = १८ लाख",
-        "vision_title": "🎁 अतिरिक्त लाभहरू:",
+        "vision_title": "अतिरिक्त लाभहरू:",
         "vision_description": "ग्राहक नोक्सानी बोनस बाहेक, तपाईंले यी पुरस्कारहरू पनि प्राप्त गर्नुहुनेछ:",
         "vision_description1": "१. सिफारिस बोनस:",
         "vision_description2": "_तपाईंले प्रत्येक योग्य सदस्यको सिफारिस गर्दा १०८ बोनस प्राप्त गर्नुहुनेछ।",
