--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -15,8 +15,8 @@
         "read_more": "More Detail"
     },
     "about": {
-        "heading": "🚀Easy withdrawals, no wagering requirements!",
-        "description": "❗️Important Reminder:",
+        "heading": "Easy withdrawals, no wagering requirements!",
+        "description": "Important Reminder:",
             "description1": "Agent rank adjusts based on performance. Ensure your promotion is active to maintain a higher rank and earn higher commissions!",
                "description2": "After upgrading, your rank will not be downgraded.",
                 "description3": "Agent rank promotion requirements are subject to change based on actual operating conditions. Please refer to website announcements for details.",
@@ -72,19 +72,24 @@
         }
     },
     "about_page": {
-        "company_intro": "💰 Rewards: 60% Profit Sharing",
+        "company_intro": "Rewards: 60% Profit Sharing",
         "company_description": "Profit Calculation:",
         "company_description1":"Profit = (Client Loss - Bonus) - 20% Operating Cost",
         "company_description2":"Your Bonus = Profit × 60% (Commission percentage increases based on agent level)",
-        "company_description3":"🎯 Agent Level and Commission Percentage:",
-       
+        "company_description3":"Agent Level and Commission Percentage:",
+        "company_description4":"Agent Level_______Client Loss Range____Commission Percentage",
+        "company_description5":"____________________________________________________________________",
+        "company_description6":"A__________________0 – 100,000___________30%_____________________",
+        "company_description7":"B__________________100,000 – 200,000____40%_____________________",
+        "company_description8":"C__________________300,000 – 400,000____50%_____________________",
+        "company_description9":"D__________________400,000_______________60%_____________________",
         "mission_title": "Example:",
         "mission_description": "Suppose you are a Level D agent and a client deposits 10 million and withdraws 6 million. Your profit is calculated as follows:",
         "mission_description1": "Client Loss: 10 million - 6 million = 4 million",
         "mission_description2": "Total Profit: 4 million - 200,000 (Bonus) - 800,000 (20% Operating Cost) = 3 million",
         "mission_description3": "Agent Level: D, 60% Bonus",
         "mission_description4": "Your Bonus: 3 million x 60% = 1.8 million",
-        "vision_title": "🎁 Additional Benefits:",
+        "vision_title": "Additional Benefits:",
         "vision_description": "In addition to client loss dividends, you will also receive the following rewards:",
         "vision_description1": "1. Referral Bonus:",
           "vision_description2": "_You will receive a bonus of 108 for each qualified member you refer.",
