--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -12,7 +12,8 @@
         "contact_us": "एजेन्ट बन्नुहोस्",
         "materials_heading": "एजेन्ट भर्ती गर्न, खेलाडी आकर्षित गर्न र रूपान्तरण बढाउन मद्दत गर्दै",
         "materials_description": "तपाईंले सिफारिस गर्नुभएका ग्राहकहरूबाट उत्पन्न नाफाको ६०% सम्म कमाउनुहोस्। उदार पुरस्कार!",
-        "read_more": "थप विवरण"
+        "read_more": "थप विवरण",
+        "image_alt": "تمثيل مرئي لرؤيتنا"
     },
     "about": {
         "heading": "सजिलो निकासी, कुनै दाँव आवश्यकता छैन!",
@@ -20,7 +21,8 @@
         "description1": "एजेन्ट र्याङ्क प्रदर्शन आधारमा समायोजन हुन्छ। उच्च कमिशन कमाउन उच्च र्याङ्क कायम राख्न सक्रिय प्रचार सुनिश्चित गर्नुहोस्!",
         "description2": "अपग्रेड पछि तपाईंको र्याङ्क घटाइने छैन।",
         "description3": "एजेन्ट र्याङ्क प्रोत्साहन आवश्यकताहरू वास्तविक सञ्चालन अवस्था अनुसार परिवर्तन हुन सक्छन्। कृपया विवरणहरूको लागि वेबसाइट सूचनाहरू हेर्नुहोस्।",
-        "read_more": "जोडिनुहोस्"
+        "read_more": "जोडिनुहोस्",
+        "image_alt": "تمثيل مرئي لرؤيتنا"
     },
     "analyze": {
         "heading": "एजेन्ट भर्ती र साझेदारी",
@@ -49,7 +51,7 @@
     },
     "footer": {
         "contact_us": "हामीलाई सम्पर्क गर्नुहोस्",
-        "description": "यदि तपाईंसँग कुनै प्रश्नहरू छन् भने कृपया टेलिग्राममा हामीलाई सम्पर्क गर्न नहिच्किचाउनुहोस्",
+        "description": "यदि तपाईंलाई कुनै प्रश्न, प्रतिक्रिया, वा मद्दतको आवश्यकता छ भने, कृपया तलका च्यानलहरू मार्फत हामीलाई सम्पर्क गर्नुहोस् ताकि तपाईंका सोधपुछहरू प्रभावकारी रूपमा समाधान गर्न सकियोस",
         "address": {
             "heading": "ठेगाना",
             "text": "P83G+996, काठमाडौं ४४६००, नेपाल"
