--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -53,7 +53,7 @@
         "contact_us": "हामीलाई सम्पर्क गर्नुहोस्",
         "description": "यदि तपाईंलाई कुनै प्रश्न, प्रतिक्रिया, वा मद्दतको आवश्यकता छ भने, कृपया तलका च्यानलहरू मार्फत हामीलाई सम्पर्क गर्नुहोस् ताकि तपाईंका सोधपुछहरू प्रभावकारी रूपमा समाधान गर्न सकियोस",
         "address": {
-            "heading": "ठेगाना",
+            "heading": "",
             "text": "P83G+996, काठमाडौं ४४६००, नेपाल"
         },
         "useful_links": {
