--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -54,7 +54,7 @@
         "contact_us": "Contact Us",
         "description": "If you have any questions, feedback, or need assistance, you can contact us through the following channels to ensure your inquiries are effectively resolved.",
         "address": {
-            "heading": "Address",
+            "heading": "",
             "text": "P83G+996, Kathmandu 44600, Nepal"
         },
         "useful_links": {
