--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -1,9 +1,9 @@
 {
     "header": {
-        "home": "",
-        "about_us": "",
+        "home": "टेलीग्राम",
+        "about_us": "फेसबुक",
         "whyus": "",
-        "projects": "",
+        "projects": "व्हाट्सएप ",
         "name": "Baji72"
     },
     "landing": {
