--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,9 +1,9 @@
 {
     "header": {
-        "home": "",
-        "about_us": "",
+        "home": "Telegram",
+        "about_us": "Facebook",
         "whyus": "",
-        "projects": "",
+        "projects": "Whatsapp",
         "name": "Baji72"
     },
     "landing": {
